--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,5 +16,5 @@ jobs :
         password : ${{secrets.GITHUB_TOKEN}}
     - name : Build and push
       run: |
-        docker build -t ghcr.io/${{github.REPO_NAME}}/hello-app:latest .
-        bocker push ghcr.io/${{github.REPO_NAME}}/hello-app:latest
+        docker build -t ghcr.io/${{github.event.repository.name}}/hello-app:latest .
+        bocker push ghcr.io/${{github.event.repository.name}}/hello-app:latest
